--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.66.3",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
